carina-cli/src/snapshots/carina_cli__module_info_snapshot_tests__snapshot_module_info.snap
---
source: carina-cli/src/module_info_snapshot_tests.rs
expression: display
---
Module: module_info

=== ARGUMENTS ===

  vpc_id: awscc.ec2.Vpc  (required)
    The VPC to deploy resources into
  environment: String  (required)
    Deployment environment name
  instance_type: String = "t3.micro"  
    EC2 instance type
  enable_monitoring: Bool = true  

=== CREATES ===

  web_sg: awscc.ec2.SecurityGroup
    └── web_instance: awscc.ec2.Instance

=== ATTRIBUTES ===

  security_group_id: awscc.ec2.SecurityGroup
  instance_id: awscc.ec2.Instance
