carina-cli/src/snapshots/carina_cli__module_info_snapshot_tests__snapshot_module_info_empty_module.snap
---
source: carina-cli/src/module_info_snapshot_tests.rs
expression: display
---
Module: empty_module

=== ARGUMENTS ===

  name: String  (required)
    Resource name prefix
  env: String = "dev"  
    Environment label

=== CREATES ===

  (none)

=== ATTRIBUTES ===

  (none)
